--- a/event.html
+++ b/event.html
@@ -149,7 +149,8 @@
           </div>
     </main>
 
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <script>
         const toggleBtn = document.querySelector('.toggle_btn');
